LA/tests/test11.a.out
{s:6, 2, 2, 0, 0, 0, 0}
ERROR: instruction at line 13 attempted to use position 2 in the dimension 1 of a tensor that only has 2 elements in that dimension
