LA/tests/test11.a
void main ( ){

  int64[][] a
  a <- new Array(2,2)
   print(a)
   initArray(a)
  return 

}

void initArray (int64[][] A){

  A[0][2] <- 0
  return

}
